2001-07-25  Ulrich Drepper  <drepper@redhat.com>

	* iconv/Makefile (install-bin): Add iconvconfig.

2001-07-25  Jakub Jelinek  <jakub@redhat.com>

	* elf/Makefile (routines): Add dl-iteratephdr and
	dl-iteratephdr-static.
	(elide-routines.os): Add dl-iteratephdr-static.
	* elf/dl-iteratephdr.c: New file.
	* elf/link.h (struct dl_phdr_info): New definition.
	(dl_iterate_phdr): New prototype.
	* elf/Versions (dl_iterate_phdr): Add at GLIBC_2.2.4.
	* include/link.h (struct dl_phdr_info): New definition.
	(dl_iterate_phdr, __dl_iterate_phdr): New prototypes.
	* sysdeps/generic/dl-iteratephdr-static.c: New file.
	* sysdeps/unix/sysv/linux/ia64/dl-iteratephdr-static.c: New file.

2001-07-24  Igor Khavkine  <i_khavki@alcor.concordia.ca>

	* hurd/hurdsig.c (_hurdsig_init): Fix incorrect initialization
	of pending signals.

2001-06-22  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/powerpc/dl-machine.c (__elf_preferred_address): Prefer
	gaps below main executable.

2001-07-22  Bruno Haible  <haible@clisp.cons.org>

	* intl/libintl.h (ngettext, dngettext, dcngettext): Use both msgid1
	and msgid2 for printf format argument checking.

2001-07-24  Ulrich Drepper  <drepper@redhat.com>

	* iconv/gconv_cache.c (find_module): Don't allocate room for the
	filename.  Use alloca, we don't need it beyond this function.
	(__gconv_release_cache): New function.
	* iconv/gconv_db.c (__gconv_close_transform): Call
	__gconv_release_cache after the steps are handled.
	* iconv/gconv_dl.c (__gconv_find_shlib): Allocate file name in the
	record as well.
	* iconv/gconv_int.h: Add prototype fpr __gconv_release_cache.

	* iconv/gconv_cache.c (__gconv_lookup_cache): Catch one more
	boundary case and reject it.

2001-07-24  Andreas Jaeger  <aj@suse.de>

	* manual/examples/longopt.c (main): Fix which options take arguments.

2001-07-24  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/Makefile: Add dependencies for tst-loading test.

2001-07-24  Andreas Jaeger  <aj@suse.de>
